--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 /Assets/Low Poly Nature Bundle
 /Assets/Fantasy Skybox FREE
+/Assets/nTools
