--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "cSpell.words": [
         "Rigidbody"
-    ]
+    ],
+    "files.exclude": {
+        "**/*.meta": true
+    },
+    "dotnet.defaultSolution": "Shuriken.sln"
 }
