Fix main menu slot updating

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "cSpell.words": [
+        "Behaviour",
+        "EMBIGGEN",
+        "Embiggens",
         "Rigidbody"
     ],
     "files.exclude": {
