Make explosions hurt

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Behaviour",
         "EMBIGGEN",
         "Embiggens",
+        "Explodinate",
         "Rigidbody"
     ],
     "files.exclude": {
