--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,5 @@ crashlytics-build.properties
 /Assets/Fantasy Skybox FREE
 /Assets/nTools
 /Assets/Platformer Party Battle\!
+/Assets/Editor/x64/Bakery
+/Assets/Bakery
