Add homing pigeon power up

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
     "cSpell.words": [
+        "Badaboom",
         "Behaviour",
         "EMBIGGEN",
         "Embiggens",
         "Explodinate",
+        "Jumpman",
         "Rigidbody"
     ],
     "files.exclude": {
