Remove unused imports

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "Badaboom",
         "Behaviour",
+        "Desaturate",
         "EMBIGGEN",
         "Embiggens",
         "Explodinate",
