Have ghost avatar follow dead players

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,4 @@ crashlytics-build.properties
 /Assets/Platformer Party Battle\!
 /Assets/Editor/x64/Bakery
 /Assets/Bakery
+/Assets/Little_GhostLP(FREE)
